--- a/Application/Themes/admin/_inc/_script.html
+++ b/Application/Themes/admin/_inc/_script.html
@@ -2,9 +2,9 @@
 <!-- endinject -->
 <!-- Plugin js for this page -->
 <script src="{{ url_for('static' , filename='admin/assets/vendors/chart.js/Chart.min.js') }}"></script>
-<script src="{{ url_for('static' , filename='static/assets/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+<script src="{{ url_for('static' , filename='assets/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 
-<script src="{{ url_for('static' , filename='static/assets/jquery/jquery.min.js') }}"></script>
+<script src="{{ url_for('static' , filename='assets/jquery/jquery.min.js') }}"></script>
 
 <!-- End plugin js for this page -->
 <!-- inject:js -->
